<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activity.ExaminationCellStudent">
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:background="@drawable/background"
    >

        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Examination cell"
                android:textSize="@dimen/txt_size_20sp"
                android:textStyle="bold"
                android:textColor="@color/colorWhite"
                android:layout_gravity="center_horizontal"
                android:gravity="center"
                android:layout_marginTop="@dimen/txt_size_20sp"
        />

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <android.support.v7.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/layout_marginBottom_10dp"
                    app:cardCornerRadius="@dimen/layout_marginBottom_10dp"
            >
                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:padding="10dp"
                >
                    <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/feedbackon_acc_stud_atte_exam_cellq1"
                    />
                    <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="horizontal"
                    >
                        <Spinner
                                android:id="@+id/spinner_examcell_q1"
                                android:layout_width="300dp"
                                android:layout_height="wrap_content"
                                android:spinnerMode="dropdown"/>
                        <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textColor="@color/colorRed"
                                android:textStyle="bold"
                                android:textSize="19dp"
                                android:text="*"
                        />
                    </LinearLayout>
                </LinearLayout>

            </android.support.v7.widget.CardView>


        </LinearLayout>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <android.support.v7.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/layout_marginBottom_10dp"
                    app:cardCornerRadius="@dimen/layout_marginBottom_10dp"
            >
                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:padding="10dp"
                >
                    <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/feedbackon_acc_stud_atte_exam_cell2"
                    />
                    <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="horizontal"
                    >
                        <Spinner
                                android:id="@+id/spinner_examcell_q2"
                                android:layout_width="300dp"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="5dp"
                        />
                        <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textColor="@color/colorRed"
                                android:textStyle="bold"
                                android:textSize="19dp"
                                android:text="*"
                        />
                    </LinearLayout>
                </LinearLayout>

            </android.support.v7.widget.CardView>


        </LinearLayout>
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <android.support.v7.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/layout_marginBottom_10dp"
                    app:cardCornerRadius="@dimen/layout_marginBottom_10dp"
            >
                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:padding="10dp"
                >

                    <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/feedbackon_acc_stud_atte_exam_cellq3"
                    />
                    <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="horizontal"
                    >
                        <Spinner
                                android:id="@+id/spinner_examcell_q3"
                                android:layout_width="300dp"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="5dp"
                        />
                        <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textColor="@color/colorRed"
                                android:textStyle="bold"
                                android:textSize="19dp"
                                android:text="*"
                        />
                    </LinearLayout>
                </LinearLayout>

            </android.support.v7.widget.CardView>


        </LinearLayout>



        <Button
                android:id="@+id/btn_examcellsubmit"
                android:layout_margin="30dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/feedback_button_bg"
                android:text="Submit"
        />



    </LinearLayout>
</LinearLayout>